kube/components/polaris/polaris-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polaris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polaris
  template:
    metadata:
      labels:
        app: polaris
    spec:
      containers:
        - name: polaris
          image: apache/polaris:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/polaris
            - name: data-volume
              mountPath: /var/lib/polaris/data
      volumes:
        - name: config-volume
          configMap:
            name: polaris-config
        - name: data-volume
          persistentVolumeClaim:
            claimName: polaris-pvc
