kube/components/polaris/polaris-service.yml
apiVersion: v1
kind: Service
metadata:
  name: polaris
  labels:
    app: polaris
spec:
  type: NodePort
  ports:
    - name: https
      port: 8080
      targetPort: 8080
      nodePort: 30786
      protocol: TCP
  selector:
    app: polaris
